# mini-sandbox

./: .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  build.sh  clean.sh  repolint.json  setenv.sh
.github/workflows/: build-ci.yml  qcom-preflight-checks.yml  release.yml
bazel_sandbox/src/main/protobuf/: execution_statistics.pb.h
bazel_sandbox/src/main/tools/: Makefile  execution_statistics.pb.cc
docs/: Build.md  Docker.md  Flags.md  Libminisandbox.md  Motivations.md  build.md  docker.md  flags.md  libminisandbox_apis.md  motivations.md  ubuntu_restrictions.md
docs/development/: summary_of_folder_relations.drawio
mini_sandbox/: Makefile  sandbox.c
mini_sandbox/src/main/landlock_inc/: landlock_compat.h
mini_sandbox/src/main/tools/: Makefile  caps-isolation.cc  caps-isolation.h  constants.h  docker-support.cc  docker-support.h  docker_support.cc  docker_support.h  error-handling.cc  error-handling.h  error_handling.cc  error_handling.h  firewall.cc  firewall.h  linux-sandbox-api-c.cc  linux-sandbox-api-c.h  linux-sandbox-api.cc  linux-sandbox-api.h  linux-sandbox-isolation.cc  linux-sandbox-isolation.h  linux-sandbox-main.cc  linux-sandbox-network.cc  linux-sandbox-network.h  linux-sandbox-options.cc  linux-sandbox-options.h  linux-sandbox-pid1.cc  linux-sandbox-pid1.h  linux-sandbox-runtime.cc  linux-sandbox-runtime.h  linux-sandbox.cc  linux-sandbox.h  ll-isolation.cc  ll-isolation.h  logging.cc  (+7 more)
mini_sandbox/src/py/: .gitignore  Build.md  MANIFEST.in  README.md  build.sh  check_package.py  pyproject.toml
mini_sandbox/src/py/ctype_bindings/: internal_mini_sandbox.py  pyminisandbox.py  pyminitapbox.py
mini_sandbox/src/py/ctype_bindings/pyminisandbox/: __init__.py  internal_mini_sandbox.py  pyminisandbox.py  pyminitapbox.py
mini_sandbox/src/py/pybind_bindings/: bindings.cpp
mini_sandbox/src/py/pybind_bindings/pyminisandbox/: Makefile  bindings.cpp
mini_sandbox/utils/firewall_example_rules/: ip.list
mini_sandbox/utils/mini_sandbox_docker/: Dockerfile  Dockerfile.debian  Dockerfile.landlock.ubuntu24  Dockerfile.pypi  Dockerfile.suse  Dockerfile.ubuntu24  README.md
mini_sandbox/utils/scripts/: check_if_in_userspace.py
mini_sandbox/utils/test/: Makefile  README.md  set_env.sh  test_all.sh
minitap/: .gitignore  .goreleaser.yaml  LICENSE  Makefile  NOTES.md  README.md  dns.go  firewall.go  go.mod  go.sum  libminitap.go  mux.go  proxy.go  tcp.go  udp.go
minitap/scripts/: install_go.sh
minitap/test/: correct_wget.c  fail_wget.c  unshare-bash.c  utils.c  utils.h
(+69 files in other folders)
